--- a/knockout.jQueryMobile/Views/Shared/_Layout.cshtml
+++ b/knockout.jQueryMobile/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div data-enhance="false" data-role="page">
+    <div data-role="page">
 
         <div data-role="panel" id="panel" data-position="right" data-theme="a" data-display="push">
             <ul data-role="listview">
