--- a/knockout.jQueryMobile/Views/Home/Buttons.cshtml
+++ b/knockout.jQueryMobile/Views/Home/Buttons.cshtml
@@ -1,20 +1,24 @@
-﻿
-<div id="buttonBindings">
-    <input type="button" data-bind="jqmButton:{click:function() {$data.disable(!$data.disable());}}" value="Toggle disabled" />
+﻿<div id="buttonBindings">    
+    <jqm-btn params="options:{
+                value: 'Toggle disabled',
+                click:  function(){disable(!disable());} 
+             }"></jqm-btn>
     <h1>Input controls</h1>
-    <div data-bind="foreach: buttonViewModels">
-        <input type="button" data-bind="jqmButton:{value: buttonText, click: $parent.buttonClicked, disable:$parent.disable}, jqmDataAttributes:{'icon': currentIcon, 'theme': currentTheme, 'corners': hasCorners, 'iconpos': iconpos, 'iconshadow':iconshadow }">
-    </div>
-
-    @*<h1>Anchor tags</h1>
-    <div data-bind="foreach: buttonViewModels">
-        <a data-bind="jqmButton:{value: buttonText, click: $parent.buttonClicked}, jqmDataAttributes:{'icon': currentIcon, 'theme': currentTheme, 'corners': hasCorners, 'iconpos': iconpos, 'iconshadow':iconshadow }">
-    </div>
-
-    <h1>Div tags</h1>
-    <div data-bind="foreach: buttonViewModels">
-        <div data-bind="jqmButton:{value: buttonText, click: $parent.buttonClicked}, jqmDataAttributes:{'icon': currentIcon, 'theme': currentTheme, 'corners': hasCorners, 'iconpos': iconpos, 'iconshadow':iconshadow }">
-    </div>*@
+    <div data-bind="foreach: buttonViewModels">         
+        <jqm-btn params="options: {
+                  value: buttonText, 
+                  click: $parent.buttonClicked, 
+                  disable:$parent.disable,
+                  jqmDataAttributes:{
+                    'icon': currentIcon, 
+                    'theme': currentTheme,
+                    'corners': hasCorners, 
+                    'iconpos': iconpos, 
+                    'iconshadow':iconshadow,
+                    'inline': inline,
+                    'mini': true
+                  }}"></jqm-btn>
+    </div> 
 </div>
 
 @section scripts{
@@ -32,7 +36,8 @@
                         buttonText: ko.observable('Theme ' + startingTheme),
                         hasCorners: ko.observable(false),
                         iconpos: ko.observable('left'),
-                        iconshadow: ko.observable(true)
+                        iconshadow: ko.observable(true),
+                        inline: ko.observable(true)
                     };
                     return buttonVm;
                 }
@@ -44,9 +49,10 @@
                         self.constructButtonViewModel('d', 'action')]);
 
                 self.selectedThemeValue = ko.observable('a');
-                self.buttonClicked = function (clickedButton) {
+                self.buttonClicked = function (clickedButton) { 
                     clickedButton.hasCorners(!clickedButton.hasCorners());
                     clickedButton.iconshadow(!clickedButton.iconshadow());
+                    clickedButton.inline(!clickedButton.inline());
                     var iconPoses = [
                         'left',
                         'right',
